# librosa

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .gitmodules  .libcst.codemod.yaml  .travis.yml  .travis_dependencies.sh  .zenodo.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.md  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  To print Fibonacci series  advanced.html  appveyor.yml  beat.html  cache.html  core.rst  decompose.html  display.html  effects.html  feature.rst  filters.html  glossary.html  index.html  install.html  install.rst  ioformats.html  mypy.ini  objects.inv  onset.html  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  environment-ci.yml  environment-docs.yml  environment-lint.yml  environment-minimal.yml  requirements-lint.txt  setup-miniconda-patched-environment-docs.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs-ci.yml  docs.yml  lint_python.yml  publish.yml
HPA/: HPA_extract_chroma.py  HPA_feature_extraction.py  HPA_stftistft.py  HPA_test.py  HPA_tuning.py  testLibrosaChord.py
_static/: bootstrap-sphinx.css
docs/: BUILD.md  Makefile  advanced.rst  beat.rst  cache.rst  changelog.rst  citing.rst  conf.py  contributing.rst  core.rst  decompose.rst  display.rst  docsite-index-redirect.html  effects.rst  feature.rst  filters.rst  genindex.rst  glossary.rst  harmonics.rst  index.rst  install.rst  io.rst  ioformats.rst  librosa.rst  magnitude_scaling.rst  miscellaneous.rst  multichannel.rst  music_notation.rst  onset.rst  output.rst  phase_recovery.rst  pitch_and_tuning.rst  recordings.rst  requirements.txt  segment.rst  signals.rst  spectral_representation.rst  troubleshooting.rst  tutorial.rst  unit_conversion.rst  (+1 more)
docs/_templates/: banner.html  page.html  versions.html
docs/advanced/: index.rst
docs/api/: beat.rst  conversions.rst  core.rst  core_audio.rst  core_freqrange.rst  core_frequnit.rst  core_harmonics.rst  core_magnitude.rst  core_misc.rst  core_notation.rst  core_phase.rst  core_pitch.rst  core_signal.rst  core_spectral.rst  core_time.rst  core_timeunit.rst  decompose.rst  display.rst  display_classes.rst  display_helpers.rst  display_viz.rst  effects.rst  feature.rst  feature_invert.rst  feature_manip.rst  feature_rhythm.rst  feature_spectral.rst  index.rst  notation.rst  onset.rst  pitch.rst  segment.rst  sequence.rst  spectral.rst  util.rst  util_array.rst  util_files.rst  util_matching.rst  util_misc.rst  util_numeric.rst  (+1 more)
docs/examples/: plot_audio_playback.py  plot_chroma.py  plot_display.py  plot_dynamic_beat.py  plot_hprss.py  plot_music_sync.py  plot_patch_generation.py  plot_pcen_stream.py  plot_presets.py  plot_rainbowgram.py  plot_segmentation.py  plot_spectral_harmonics.py  plot_superflux.py  plot_viterbi.py  plot_vocal_separation.py
docs/reference/: index.rst
docs/tutorials/: README.txt
examples/: LibROSA demo.ipynb  LibROSA demo.py  LibROSA sklearn feature pipeline.ipynb  README.txt  adjust_tuning.py  analyzer.py  beat_tracker.py  chord_estimation.py  estimate_tuning.py  hprss.py  hpss.py  hpss_beats.py  onset_detector.py  plot_music_sync.py  plot_pcen_stream.py  plot_segmentation.py  time_stretch.py  tuning.py
examples/models/: majmin.p
librosa/: __init__.py  __init__.pyi  _cache.py  _cache.pyi  _chroma.py  _mfcc.py  _typing.py  beat.py  beat.pyi  cache.py  chord.py  chords.py  chroma.py  core.py  decompose.py  decompose.pyi  display.py  display.pyi  effects.py  effects.pyi  feature.py  filters.py  filters.pyi  framegenerator.py  hpss.py  minmaj_params.txt  onset.py  onset.pyi  output.py  segment.py  segment.pyi  sequence.py  sequence.pyi  stft.py  tf_agc.py  util.py  version.py  version.pyi
librosa/FeatureExtraction/: HPA_HPSS.py  HPA_beat_tracker.py
librosa/core/: __init__.py  __init__.pyi  audio.py  audio.pyi  constantq.py  constantq.pyi  convert.py  convert.pyi  cqt.py  dtw.py  fft.py  fft.pyi  harmonic.py  harmonic.pyi  intervals.json  intervals.msgpack  intervals.pickle  intervals.py  notation.py  notation.pyi  pitch.py  pitch.pyi  spectrum.py  spectrum.pyi  time_frequency.py
librosa/feature/: __init__.py  __init__.pyi  inverse.py  inverse.pyi  pitch.py  rhythm.py  rhythm.pyi  spectral.py  spectral.pyi  utils.py  utils.pyi
librosa/util/: __init__.py  __init__.pyi  _nnls.py  _nnls.pyi  decorators.py  decorators.pyi  deprecation.py  deprecation.pyi  exceptions.py  exceptions.pyi  feature_extractor.py  files.py  files.pyi  matching.py  matching.pyi  util.py  utils.py  utils.pyi
noarch/: repodata.json.bz2
scripts/: audit_docstring_examples.py  benchmark_pyin_viterbi.py  create_author_list.py  create_intervals.py  get_latest_release.sh  parse_examples.py  pull_dois.py
tests/: .coveragerc  README.md  conftest.py  makeCTData.m  makeMETdata.m  makeTestData.m  make_mel_norm_test_data.ipynb  mpl_ic.py  mypy.ini  pitch-pyin.npy  pitch-yin.npy  testLibrosaBeat.py  testLibrosaCore.py  testLibrosaDecompose.py  testLibrosaFeature.py  testLibrosaUtil.py  test_audio.flac  test_beat.py  test_cache.py  test_constantq.py  test_convert.py  test_core.py  test_decompose.py  test_display.py  test_dtw.py  test_effects.py  test_failures.py  test_feature.py  test_features.py  test_filters.py  test_intervals.py  test_matan.py  test_met_features.py  test_multichannel.py  test_notation.py  test_onset.py  test_output.py  test_pitch_shift.py  test_segment.py  test_sequence.py  (+2 more)
tests/data/: beat-beat-000.mat  beat-onset-000.mat  beat-tempo-000.mat  core-ifgram-002.mat  core-ifgram-003.mat  core-ifgram-005.mat  core-ifgram-006.mat  core-ifgram-008.mat  core-ifgram-009.mat  core-istft-001.mat  core-istft-002.mat  core-istft-003.mat  core-istft-004.mat  core-istft-005.mat  core-istft-006.mat  core-istft-007.mat  core-istft-008.mat  core-istft-009.mat  core-istft-010.mat  core-istft-011.mat  core-istft-012.mat  core-istft-017.mat  core-istft-018.mat  core-load-001.mat  core-load-002.mat  core-lpcburg-001.mat  core-lpcburg-002.mat  (+302 more)
(+37 files in other folders)
