[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "S", "D", "W", "I", "PYI", "Q", "B", "SIM"]
ignore = [
    "D107",
    "D203",
    "D205",
    "D212",
    "D213",
    "D400",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
    "S101",
    "SIM108",  # Ternary operators are bad for readability
    "SIM300"   # Yoda condition is different in numpy vectorized code
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/__init__.pyi" = ["F401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["librosa.util.deprecation.Deprecated"]
