[tool:pytest]
xfail_strict = true
addopts = --cov-report term-missing --cov librosa --cov-report=xml --mpl --mpl-baseline-path=tests/baseline_images/test_display
# ignoring deprecation warnings from packages that we're phasing out anyway
filterwarnings =
    ignore::DeprecationWarning:resampy.*


[metadata]
name = librosa
version = attr: librosa.version.version
description = Python module for audio and music processing
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://librosa.org
author = Brian McFee, librosa development team
author_email = brian.mcfee@nyu.edu
license = ISC
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation = https://librosa.org/doc
    Download = https://github.com/librosa/librosa/releases
    Source = https://github.com/librosa/librosa
    Tracker = https://github.com/librosa/librosa/issues
    Discussion forum = https://groups.google.com/g/librosa
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Framework :: Matplotlib
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = find:
include_package_data = True
install_requires =
    numba >= 0.61.0
    numpy >= 2.1.0
    scipy >= 1.15.0
    scikit-learn >= 1.6.0
    joblib >= 1.2
    decorator >= 5.2.1
    soundfile >= 0.12.1
    pooch >= 1.7
    soxr >= 1.0.0
    lazy_loader >= 0.3
    msgpack >= 1.0.5

python_requires = >=3.12
zip_safe = False

[options.package_data]
librosa =
    util/example_data/*
    py.typed
    core/intervals.msgpack

[options.extras_require]
docs =
    numpydoc >= 1.8.0
    sphinx != 1.3.1
    sphinx_rtd_theme>=1.2.0
    matplotlib >= 3.10.0
    pydata-sphinx-theme >= 0.18.0
    sphinx-gallery >= 0.7
    sphinx-design >= 0.7.0
    mir_eval >= 0.5
    ipython >= 7.0
    sphinxcontrib-svg2pdfconverter
    sphinxcontrib-googleanalytics >= 0.4
    presets
    sphinx-copybutton >= 0.5.2
    myst-parser >= 2.0
tests =
    matplotlib >= 3.10.0
    packaging >= 23.2
    pytest-mpl
    pytest-cov
    pytest
    samplerate
    resampy >= 0.4.3
    scipy-stubs
    types-decorator
display =
    matplotlib >= 3.10.0


[mypy]
check_untyped_defs = True
allow_redefinition = True
follow_imports = silent
strict = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
disallow_untyped_calls = False
disallow_any_generics = False
disallow_subclassing_any = False

; Ignore libraries for which no type annotations are available.
[mypy-soundfile.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-numba.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-pooch.*]
ignore_missing_imports = True

[mypy-lazy_loader.*]
ignore_missing_imports = True

[mypy-soxr.*]
ignore_missing_imports = True

[mypy-msgpack.*]
ignore_missing_imports = True

[mypy-packaging.*]
ignore_missing_imports = True
